--- a/package.json
+++ b/package.json
@@ -16,20 +16,23 @@
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.2",
     "hardhat": "^2.7.1",
+    "hardhat-deploy-ethers": "^0.3.0-beta.11",
     "ipfs-http-client": "50.1.2",
     "next": "12.0.7",
+    "postcss-preset-env": "^7.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "web3modal": "^1.9.4"
   },
   "devDependencies": {
-    "@types/node": "16.11.12",
+    "@types/node": "^16.11.12",
     "@types/react": "17.0.37",
     "autoprefixer": "^10.4.0",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
     "postcss": "^8.4.4",
     "tailwindcss": "^3.0.1",
+    "ts-node": "^10.4.0",
     "typescript": "4.5.3"
   }
 }
